Have done few changes in search and home page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,9 +66,9 @@
                                                 th:field="*{institution}"
                                                 th:onchange="'javascript:toggleInstitutionValidation()'">
                                             <option value="">Select One</option>
-                                            <option value="PUL">PUL</option>
-                                            <option value="CUL">CUL</option>
-                                            <option value="NYPL">NYPL</option>
+                                            <option value="PUL">Princeton</option>
+                                            <option value="CUL">Columbia</option>
+                                            <option value="NYPL">New York Public Library</option>
                                             <option value="HTC">HTC</option>
                                         </select>
                                     </div>
