--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -62,8 +62,8 @@
                                         </button>
                                     </div>
                                     <div class="input-group-btn padding-right-10">
-                                        <button id="newSearch" type="submit" name="action" value="newSearch" class="btn themed-button themed-button-cancel">
-                                            New Search
+                                        <button id="resetSearch" type="submit" name="action" value="newSearch" class="btn themed-button themed-button-cancel" disabled = "disabled">
+                                            Reset Search
                                         </button>
                                     </div>
                                     <div class="input-group-btn">
