--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -272,10 +272,9 @@
 
                                         </div>
                                         <div class="row">
-                                                <div class="col-xs-12 text-center">
+                                                <div class="col-sm-6 col-md-6 col-lg-6 text-center">
                                                     <button type="submit" name="action" value="loadCreateRole" class="btn btn-default themed-button btn-primary" id="createrolesubmitHdn" style="display: none;">Create Role</button>
-                                                    <button type="button" class="btn btn-default themed-button btn-primary" id="createrolesubmit" onclick="createRole()">Create Role</button>
-                                                    <button type="reset" class="btn btn-default themed-button themed-button-cancel pull-right" id="createrequestclear" onclick="createResetDefault()">Clear</button>
+                                                    <button type="button" class="pull-right btn btn-default themed-button btn-primary" id="createrolesubmit" onclick="createRole()">Create Role</button>
                                                 </div>
                                         </div>
                                     </div>
@@ -383,10 +382,9 @@
 
                                     </div>
                                     <div class="row">
-                                        <div class="col-xs-12 text-center">
+                                        <div class="col-sm-6 col-md-6 col-lg-6 text-center">
                                             <button type="submit" name="action" value="editRole" class="btn btn-default themed-button btn-primary" id="editRolesubmitHdn" style="display: none;">Edit Role</button>
-                                            <button type="button" class="btn btn-default themed-button btn-primary" id="editRolesubmit" onclick="saveEditedRole()">Edit Role</button>
-                                            <button type="reset" class="btn btn-default themed-button themed-button-cancel pull-right" id="editRequestclear" onclick="editResetDefault()">Clear</button>
+                                            <button type="button" class="pull-right btn btn-default themed-button btn-primary" id="editRolesubmit" onclick="saveEditedRole()">Edit Role</button>
                                         </div>
                                     </div>
                                 </div>
