--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -318,15 +318,11 @@
                                         </div>
                                     </div>
                                     </div>
-                                    <div class="col-xs-12 text-center"
+                                    <div class="col-sm-6 col-md-6 col-lg-6 text-center"
                                          style="margin-top: -10px;">
                                         <div class="margin-btm-10 users-createrequest-button">
                                             <button id="createButton" type="button" onclick="submitForm()"
-                                                    class="btn btn-default themed-button btn-primary text-center">Create User
-                                            </button>
-                                            <button id="reset" type="button"
-                                                    class="btn btn-default themed-button themed-button-cancel pull-right">
-                                                Clear
+                                                    class="pull-right btn btn-default themed-button btn-primary text-center">Create User
                                             </button>
                                         </div>
                                     </div>
@@ -452,14 +448,10 @@
                                         </div>
                                     </div>
                                     </div>
-                                    <div class="col-xs-12 " style="margin-top: -10px;">
+                                    <div class="col-sm-6 col-md-6 col-lg-6" style="margin-top: -10px;">
                                             <div class="margin-btm-10 users-createrequest-button">
                                                 <button id="editcreateButton" type="button" onclick="editUserDetails()"
-                                                        class="btn btn-default themed-button btn-primary text-center col-md-2 col-md-offset-5">Edit User
-                                                </button>
-                                                <button type="reset"
-                                                        class="btn btn-default themed-button themed-button-cancel pull-right"
-                                                        onclick="editclear();">Clear
+                                                        class="pull-right btn btn-default themed-button btn-primary text-center col-md-2 col-md-offset-5">Edit User
                                                 </button>
                                             </div>
                                         </div>
