--- a/src/main/resources/templates/searchRecords.html
+++ b/src/main/resources/templates/searchRecords.html
@@ -44,6 +44,9 @@
                     <li th:if="${session.isUserRoleAllowed}" role="presentation" class="tab-users-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/userRoles' ? 'active':''}">
                         <a href="/userRoles" aria-controls="users" class="tab-users"><span class="icons"></span><span>Users</span></a>
                     </li>
+                    <li th:if="${session.isSuperAdmin}" role="presentation" th:classappend="${#httpServletRequest.getRequestURI() == '/jobs' ? 'active':''}">
+                        <a href="/jobs" aria-controls="jobs" class="tab-users"><span class="icons"></span><span>Jobs</span></a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div th:replace="${template} :: content"></div>
