Fixed Issue for Placing requests for own institution's items and Shared/Open items of other institution

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -278,6 +278,7 @@
                                                             <option th:each="requestingInstitution : ${requestForm.requestingInstitutions}" th:value="${requestingInstitution}" th:text="${requestingInstitution}"></option>
                                                         </select>
                                                         <span id="requestingInstitutionErrorMessage" style="color: red;">Requesting institution is required.</span>
+                                                        <input type="hidden" id="reqInstituionHidden" th:field="${requestForm.requestingInstitution}"/>
                                                     </div>
                                                 </div>
 
