RECAP-650 : RECAP-650 : Rollback deaccession and show message if LAS rejects the item.

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -247,6 +247,7 @@
                                                 <h4 class="border-style-bottom padding-10 margin-top-05 margin-btm-0">Item Details</h4>
                                                 <div id="itemDetailsSection" class="padding-10">
                                                     <input id="allowEdit" type="hidden" th:field="${collectionForm.allowEdit}"/>
+                                                    <input id="warningMessage" type="hidden" th:field="${collectionForm.warningMessage}"/>
                                                     <div class="row form-group">
                                                         <div id="collectionUpdateMessage" class="row margin-btm-10" th:if="${collectionForm.message ne null &amp;&amp; collectionForm.message ne ''}">
                                                             <div class="col-sm-12">
@@ -262,7 +263,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div id="collectionUpdateWarningMessage" class="row margin-btm-10" th:if="${collectionForm.warningMessage ne null &amp;&amp; collectionForm.warningMessage ne ''}">
+                                                        <div id="collectionUpdateWarningMessage" class="row margin-btm-10" th:if="${((collectionForm.message eq null || collectionForm.message eq '') &amp;&amp; (collectionForm.errorMessage eq null || collectionForm.errorMessage eq '')) &amp;&amp; (collectionForm.warningMessage ne null &amp;&amp; collectionForm.warningMessage ne '')}">
                                                             <div class="col-sm-12">
                                                                 <div class="bg-warning text-warning padding-10">
                                                                     <span id="warningMessageId" class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span th:text="${collectionForm.warningMessage}"></span>
