--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -487,7 +487,8 @@
                                                               class="form-control themed-input"
                                                               th:field="${requestForm.requestNotes}"
                                                               onkeyup="NotesLengthValidation()"
-                                                              rows="5">
+                                                              rows="5"
+                                                              maxlength="2000">
                                                     </textarea>
                                                     <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 Characters Allowed.</span>
                                                 </div>
@@ -555,7 +556,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div>
-                                            <textarea id="requestNotesData" class="form-control themed-input" rows="4" readonly="readonly" style="border: none"></textarea>
+                                            <textarea id="requestNotesData" class="form-control themed-input" rows="4" readonly="readonly" style="border: none;overflow: hidden"></textarea>
                                         </div>
                                     </div>
                                 </div>
