Recap 675 error text has been changed.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -490,7 +490,7 @@
                                                               rows="5"
                                                               maxlength="2000">
                                                     </textarea>
-                                                    <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 Characters Allowed.</span>
+                                                    <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 characters allowed.</span>
                                                 </div>
                                             </div>
                                         </div>
