--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -243,8 +243,8 @@
                                                               th:field="*{newRoleDescription}"
                                                               maxlength="45">
                                                     </input>
-                                                            <span id="roleDescriptionErrorMessage" style="color: red;">Role Description is required.</span>
-                                                            <span id="roleDescriptionLengthError" style="color: red;display: none">Only 45 Characters Allowed.</span>
+                                                            <span id="roleDescriptionErrorMessage" style="color: red;">Role description is required.</span>
+                                                            <span id="roleDescriptionLengthError" style="color: red;display: none">Only 45 characters allowed.</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -355,8 +355,8 @@
                                                               th:field="*{editRoleDescription}"
                                                               maxlength="45">
                                                     </input>
-                                                        <span id="editRoleDescriptionErrorMessage" style="color: red;">Role Description is required.</span>
-                                                        <span id="editRoleDescriptionLengthErrMsg" style="color: red;display: none">Only 45 Characters Allowed.</span>
+                                                        <span id="editRoleDescriptionErrorMessage" style="color: red;">Role description is required.</span>
+                                                        <span id="editRoleDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed.</span>
                                                     </div>
                                                 </div>
                                             </div>
