--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -354,8 +354,8 @@
                                                             </div>
                                                             <div class="col-sm-8 padding-left-0">
                                                                 <textarea class="form-control themed-input" name="CGDChangeNotes" id="CGDChangeNotes" th:field="${collectionForm.cgdChangeNotes}" th:if="${!collectionForm.submitted}" th:onkeyup="'javascript:toggleCgdNotesValidation()'" maxlength="2000"></textarea>
-                                                                <span id="cgdNotesErrorMessage" style="color: red;">Please enter CGD Change Notes.</span>
-                                                                <span id="cgdNotesLengthErrMsg" style="color: red;display: none">Only 2000 Characters Allowed.</span>
+                                                                <span id="cgdNotesErrorMessage" style="color: red;">Please enter CGD change notes.</span>
+                                                                <span id="cgdNotesLengthErrMsg" style="color: red;display: none">Only 2000 characters allowed.</span>
                                                                 <div class="form-group">
                                                                     <span id="CGDNoteReadOnly" th:if="${collectionForm.submitted}" th:text="${collectionForm.cgdChangeNotes}"></span>
                                                                 </div>
@@ -415,8 +415,8 @@
                                                             <div class="col-sm-4 text-right padding-right-30 margin-top-10"><label for="DeaccessionNotes" class="fontcolor-dark">Deaccession Notes <span class="error-color" th:if="${!collectionForm.submitted}">*</span></label></div>
                                                             <div class="col-sm-8 padding-left-0 padding-top-10">
                                                                 <textarea class="form-control themed-input" name="DeaccessionNotes" id="DeaccessionNotes" th:field="${collectionForm.deaccessionNotes}" th:if="${!collectionForm.submitted}" th:onkeyup="'javascript:toggleDeaccessionNotesValidation()'" maxlength="2000"></textarea>
-                                                                <span id="deaccessionNotesErrorMessage" style="color: red;">Please enter Deaccession Notes.</span>
-                                                                <span id="deaccessionNotesLengthErrMsg" style="color: red;display: none">Only 2000 Characters Allowed.</span>
+                                                                <span id="deaccessionNotesErrorMessage" style="color: red;">Please enter deaccession notes.</span>
+                                                                <span id="deaccessionNotesLengthErrMsg" style="color: red;display: none">Only 2000 characters allowed.</span>
                                                                 <span th:if="${collectionForm.submitted}" th:text="${collectionForm.deaccessionNotes}"></span>
                                                             </div>
                                                         </div>
