--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -299,8 +299,8 @@
                                             <input class="form-control themed-input" name="userDescription"
                                                    id="userDescription" th:field="${userRoleForm.userDescription}"
                                                    placeholder="" type="text" th:onkeyup="'javascript:toggleUserDescriptionValidation()'" maxlength="45"/>
-                                            <span id="userDescriptionErrMsg" style="color: red;display: none">Please provide User Description </span>
-                                            <span id="userDescriptionLengthErrMsg" style="color: red;display: none">Only 45 Characters allowed</span>
+                                            <span id="userDescriptionErrMsg" style="color: red;display: none">Please provide user description </span>
+                                            <span id="userDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -428,8 +428,8 @@
                                                    id="edituserDescription"
                                                    th:field="${userRoleForm.editUserDescription}" placeholder=""
                                                    type="text" maxlength="45"/>
-                                            <span id="edituserDescriptionErrMsg" style="color: red;display: none">Please provide User Description </span>
-                                            <span id="editUserDescriptionLengthErrMsg" style="color: red;display: none">Only 45 Characters allowed</span>
+                                            <span id="edituserDescriptionErrMsg" style="color: red;display: none">Please provide user description </span>
+                                            <span id="editUserDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
