--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -490,7 +490,7 @@
                                                               rows="5"
                                                               maxlength="2000">
                                                     </textarea>
-                                                    <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 characters allowed.</span>
+                                                    <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 characters are allowed.</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -556,7 +556,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div>
-                                            <textarea id="requestNotesData" class="form-control themed-input" rows="4" readonly="readonly" style="border: none;overflow: hidden"></textarea>
+                                            <textarea id="requestNotesData" class="form-control themed-input" rows="4" readonly="readonly" style="border: none;"></textarea>
                                         </div>
                                     </div>
                                 </div>
