--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -244,7 +244,7 @@
                                                               maxlength="45">
                                                     </input>
                                                             <span id="roleDescriptionErrorMessage" style="color: red;">Role description is required.</span>
-                                                            <span id="roleDescriptionLengthError" style="color: red;display: none">Only 45 characters allowed.</span>
+                                                            <span id="roleDescriptionLengthError" style="color: red;display: none">Only 45 characters are allowed.</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -356,7 +356,7 @@
                                                               maxlength="45">
                                                     </input>
                                                         <span id="editRoleDescriptionErrorMessage" style="color: red;">Role description is required.</span>
-                                                        <span id="editRoleDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed.</span>
+                                                        <span id="editRoleDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters are allowed.</span>
                                                     </div>
                                                 </div>
                                             </div>
