--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -300,7 +300,7 @@
                                                    id="userDescription" th:field="${userRoleForm.userDescription}"
                                                    placeholder="" type="text" th:onkeyup="'javascript:toggleUserDescriptionValidation()'" maxlength="45"/>
                                             <span id="userDescriptionErrMsg" style="color: red;display: none">Please provide user description </span>
-                                            <span id="userDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed</span>
+                                            <span id="userDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters are allowed</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -429,7 +429,7 @@
                                                    th:field="${userRoleForm.editUserDescription}" placeholder=""
                                                    type="text" maxlength="45"/>
                                             <span id="edituserDescriptionErrMsg" style="color: red;display: none">Please provide user description </span>
-                                            <span id="editUserDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters allowed</span>
+                                            <span id="editUserDescriptionLengthErrMsg" style="color: red;display: none">Only 45 characters are allowed</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
