--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -2,6 +2,8 @@
 <div id="userRolesContentId" name="userRolesContentName" th:fragment="content" xmlns:th="http://www.thymeleaf.org"
      role="tabpanel" class="tab-pane active">
     <link rel="stylesheet" th:href="@{../css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{../css/search.css}"/>
+    <script type="text/javascript" th:src="@{../js/jquery.tablesorter.js}"></script>
     <script type="text/javascript" th:src="@{../js/bootstrap-multiselect.js}"></script>
     <script type="text/javascript" th:src="@{../js/select-step.js}"></script>
     <link rel="stylesheet" th:href="@{../css/bootstrap-multiselect.css}"/>
@@ -119,14 +121,15 @@
                                                                     th:text="${userRoleForm.totalRecordsCount}"></span>
                                             </h4>
                                             <!--<label id="ResultFound"><h4>Search Result Found:<span th:text="${userRoleForm.totalRecordsCount}"></span></h4></label>-->
-                                            <table class="table table-striped margin-btm-0"
-                                                   data-th-if="${userRoleForm.showResults}">
+                                            <div data-th-if="${userRoleForm.showResults}">
+                                            <table class="table table-striped" id="search-result-table-users">
                                                 <thead class="tablesorter-headerRow">
                                                 <tr>
-                                                    <th width="20%">Network Login Id</th>
-                                                    <th width="20%">Institution</th>
-                                                    <th width="20%">Associated Roles</th>
-                                                    <th class="text-center">Action</th>
+                                                    <th class="sortHead" width="20%">Network Login Id</th>
+                                                    <th data-sorter="false" width="20%">User Name</th>
+                                                    <th class="sortHead" width="20%">Institution</th>
+                                                    <th data-sorter="false" width="20%">Associated Roles</th>
+                                                    <th data-sorter="false" class="text-center">Action</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
@@ -137,6 +140,9 @@
                                                            th:text="${userRolesL.userDescription}"/>-->
                                                     <td>
                                                         <span th:text="${userRolesL.networkLoginId}"></span>
+                                                    </td>
+                                                    <td>
+                                                        <span th:text="${userRolesL.userDescription}"></span>
                                                     </td>
                                                     <td>
                                                         <span th:text="${userRolesL.institutionName}"></span>
@@ -157,6 +163,7 @@
                                                 </tr>
                                                 </tbody>
                                             </table>
+                                            </div>
                                             <div id="userRolePaginationDivId" name="userRolePaginationDivName"
                                                  class="col-md-12" style="margin-bottom: -20px; display: none"
                                                  data-th-if="${userRoleForm.showResults}">
@@ -292,7 +299,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-md-3 text-right col-sm-4">
-                                            <label for="userDescription" class="margin-top-10">User Description <span
+                                            <label for="userDescription" class="margin-top-10">User Name <span
                                                     class="error-color">*</span></label>
                                         </div>
                                         <div class="col-sm- col-sm-6">
@@ -420,7 +427,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-md-3 text-right col-sm-4">
-                                            <label for="userDescription" class="margin-top-10">User Description <span
+                                            <label for="userDescription" class="margin-top-10">User Name <span
                                                     class="error-color">*</span></label>
                                         </div>
                                         <div class="col-sm- col-sm-6">
@@ -543,7 +550,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-md-3 text-right col-sm-4">
-                                            <label for="deleteUserDescription" class="margin-top-10">User Description <span
+                                            <label for="deleteUserDescription" class="margin-top-10">User Name <span
                                                     class="error-color">*</span></label>
                                         </div>
                                         <div class="col-md-6 col-sm-6">
@@ -556,7 +563,7 @@
                                     <div class="form-group">
                                         <div class="col-md-3 text-right col-sm-4">
                                             <label for="deleteEmailId" class="margin-top-10">Email Id<span
-                                                    class="error-color">*</span></label>
+                                                    class="error-color"></span></label>
                                         </div>
                                         <div class="col-md-6 col-sm-6">
                                             <input class="form-control themed-input" name="deleteEmailId" readonly="readonly"
